<resources>
    <string name="app_name">Guide to the Wizarding World of Harry Potter</string>
    <string name="food">Food</string>
    <string name="favorites">Favorites</string>
    <string name="activities">Activities</string>
    <string name="shopping">Shopping</string>
    <string name="rides">Rides</string>
    <string name="shows">Shows</string>
    <string name="threeBroomSticks">Three Broomsticks is a rustic tavern where visitors to Hogsmeade can come to share a pint of Butterbeer or pumpkin juice and dine on hearty fare. In this restaurant you can choose from such main courses as the \“Great Feast Platter\”, fish and chips, shepherd\'s pie, Cornish pasty, turkey legs, and fresh vegetables. Children\’s menu items include chicken, macaroni and cheese, fish and chips, and chicken fingers, each served with grapes and applesauce. Dessert choices include apple pie, strawberry and peanut butter ice cream, and chocolate trifle. At the rear of the Three Broomsticks tavern is the Hog\’s Head pub. Here the family enjoys Butterbeer, pumpkin juice, and other beverages while adults sample the pub\’s selection of domestic and imported beers, specialty drinks, wine, spirits, and mixed drinks.</string>
    <string name="hogsHeadPub">Hog\’s Head Pub is located adjacent to the Three Broomsticks Restaurant. The hog\’s head on the wall comes to life and snorts at you and the dirty grimy look of the walls and ceiling definitely gives you that authentic feel from the Harry Potter series. Many different alcoholic drinks are available but the most popular drink would have to be the Butterbeer (which is non-alcoholic).</string>
    <string name="leakyCauldron">Visitors to Diagon Alley don\’t have to go far to satisfy their appetites. Located at the entrance to Diagon Alley is the Leaky Cauldron. This popular gathering place for witches and wizards is a pub where visitors can sit down and relax while enjoying a traditional British meal in rustic surroundings. Here, guests can sample delicious pub fare including a selection of favorites such as fish and chips, bangers and mash, cottage pie, and, of course, Butterbeer and pumpkin juice. </string>
    <string name="hoppingPot">At this walk-up kiosk, guests can select drinks from Wizard\’s Brew and Hog Head\’s Brew to Butterbeer, as well as a selection of snacks.</string>
    <string name="floreanFortescue">Guests looking for something on the sweeter side can visit Florean Fortescue\’s Ice-Cream Parlour. This Diagon Alley favorite has long been the destination for frozen treats in a variety of interesting and unique flavors like strawberry and peanut-butter ice-cream and many others.</string>
    <string name="dragonsChallenge">Marvel at the blazing Goblet of Fire and the shining Triwizard Cup as you take on the Dragon Challenge. Choose your dragon: an aggressive Chinese Fireball or a ferocious Hungarian Horntail. You\’ll need the courage of a Triwizard Tournament champion as you climb aboard one of the two ferocious dragons that twist and loop in a high-speed, intertwining roller coaster chase across the sky. Each dragon is a completely different ride.</string>
    <string name="flightHippogriff">Pass by Hagrid\’s hut and follow his instructions as you learn the proper way to approach a Hippogriff, which has the head of a giant eagle and the body of a horse. Then it’s time to take a \“training flight\” aboard the Flight of the Hippogriff, an enchanting family coaster woven from wicker and decorated with fluttering leaves representing feathers. Bow as you approach the \“rea\l” Hippogriff, and then you\’re spiraling and diving around the pumpkin patch, and swooping past Hagrid\’s hut.</string>
    <string name="forbiddenJourney">Enter through the towering castle gates and make your way through the familiar passageways and corridors of Hogwarts School of Witchcraft and Wizardry. You\’ll visit iconic locations such as Dumbledore\’s office, the Defense Against the Dark Arts classroom, the Gryffindor common room, the Room of Requirement, and more. Then get ready to soar above the castle grounds as you join Harry Potter and his friends on an unforgettable thrilling adventure, coming face-to-face with an array of magical creatures! This amazing attraction uses groundbreaking, state-of-the-art technology (and a little magic) to create a one of a kind ride experience.</string>
    <string name="escapeGringotts">Enter Gringotts bank at the far end of Diagon Alley and walk through the grand marble lobby where you’ll see goblins hard at work. Then, get ready to take a journey through the cavernous passageways that lead deep underground as you climb aboard the groundbreaking new, multi-dimensional thrill ride, Harry Potter and the Escape from Gringotts. This incredibly immersive ride puts you right in the  middle of the action as you navigate your way through the perils of the Gringotts vaults--encountering Harry, Ron, and Herminone along the way! </string>
    <string name="hogsmeadeStation">Departing Hogsmeade village in Islands of Adventure, a Hogwarts Prefect will guide you to your seating compartment aboard the Hogwarts Express.\n Once on your way, get ready to encounter familiar characters and creatures from the Harry Potter books and films. But be sure to keep your wits about you — because mischief could materialize at any moment!\n You\'ll enjoy scenic views of the British countryside from the train window before arriving at your destination: King\'s Cross Station in The Wizarding World of Harry Potter— Diagon Alley, located inside Universal Studios Florida.</string>
    <string name="kingsCrossStation">To board the Hogwarts Express at King\'s Cross Station, you\'ll walk straight through a solid brick wall onto Platform 9 ¾ where a Hogwarts Prefect will be waiting to lead you to your passenger compartment.\n As you wind your way through the British countryside, keep watch outside your window. You never know who — or what — you might see flying, swooping or lurking just outside the train. You might encounter an adventure or two along the way as well, before alighting at Hogsmeade Station in Islands of Adventure.</string>
    <string name="celestinaWarbeck">Enjoy a concert performance featuring the \“Singing Sorceress\” Celestina Warbeck and the Singing Banshees. The show features original music titles created by J.K. Rowling including: \“A Cauldron Full Of Hot, Strong Love,\” \“You Stole My Cauldron But You Can\’t Have My Heart\” and \“You Charmed The Heart Right Out Of Me\”. It runs at various times throughout the day in the shopping area of Diagon Alley called Carkitt Market.</string>
    <string name="frogChoir">Enjoy a presentation of songs by a small choir of Hogwarts students, accompanied by their large croaking frogs. The show takes place near the Flight of the Hippogriff.</string>
    <string name="olivandersExperienceH">Visit Ollivanders, Makers of Fine Wands since 382 B.C. Step into the small dusty shop and gaze up at the countless wand boxes stacked to the ceiling. Here, in a unique interactive experience, you can see a wand choose a wizard. You can purchase your own Ollivanders wand, or choose from a selection including Harry Potter film character wand replicas, collectible wand sets, and more.</string>
    <string name="olivandersExperienceDA">Visit Ollivanders, Makers of Fine Wands since 382 B.C. Step into the small dusty shop and gaze up at the countless wand boxes stacked to the ceiling. Here, in a unique interactive experience, you can see a wand choose a wizard. You can purchase your own Ollivanders wand, or choose from a selection including Harry Potter film character wand replicas, collectible wand sets, and more.</string>
    <string name="talesBeadle">Enjoy a retelling of the \“Tale of The Three Brothers\” by Beedle the Bard. Actors and Puppeteers bring the story of The Deathly Hallows to life during a live on stage performance. The show takes place in the shopping area of Diagon Alley called Carkitt Market.</string>
    <string name="triwizardSpirit">Cheer on the colorful procession of Hogwarts, Beauxbatons and Durmstrang students as they lead the excitement for the Triwizard Tournament. Show takes place near the Flight of the Hippogriff.</string>
    <string name="borginBurkes">Practitioners of the Dark Arts know they can find everything they need in Knockturn Alley, a gloomy back street just off Diagon Alley. Those brave enough to wander down the dark, narrow alleyway will encounter a variety of shops and storefronts showcasing objects associated with Dark Magic. Here you’ll be able to visit Borgin and Burkes where you’ll find shelves lined with items such as Death Eater masks, skulls, and other sinister objects.</string>
    <string name="dervishBanges">Be sure to stop at Dervish and Banges for such magical items as Sneakoscopes, Spectespecs, Omnioculars, and The Monster Book of Monsters. Dervish and Banges carries all your Quidditch needs including t-shirts, Quaffles, Golden Snitches, and brooms including the Nimbus 2001 and the Firebolt. You\’ll find Hogwarts school uniforms and clothing including robes, scarves, ties, t-shirts, and sweatshirts. The store offers an assortment of other merchandise such as journals and stationery items.</string>
    <string name="filchsEmporium">Here you can see confiscated items and purchase souvenirs such as Hogwarts clothing including jackets, t-shirts, sweatshirts, shoulder bags, caps, and scarves; plus house crest banner, stationery, and other gifts. There are authentic movie prop replicas including character walking sticks, Death Eater masks, and film-based chess sets; assorted Quidditch clothing, magical creature toys and clothing; plus a variety of assorted toys and other souvenirs. It is also here, at the attraction exit, that guests can purchase a photo of their ride experience on Harry Potter and the Forbidden Journey.</string>
    <string name="gringottMoneyExchange">Exchange your Muggle currency for Gringotts Bank Notes used for purchases within Diagon Alley, Knockturn Alley, Hogsmeade, Hogwarts, and London.</string>
    <string name="honeydukes">A must-stop for visitors to Hogsmeade, at Honeydukes the shelves are lined with all manner of colorful sweets, including Acid Pops, exploding bonbons, Cauldron Cakes, treacle fudge, Fizzing Whizzbees, and Chocolate Frogs, which contain a wizard trading card in each box. Inside the shop you can fill up a bag of Bertie Bott’s Every-Flavour Beans… who know what tasty (or not so tasty) flavors you’ll discover! The shop also offers other classic favorites such a chocolates and fudge.</string>
    <string name="madamMalkins">Here guests will find a variety of wizardwear such as a selection of Hogwarts school uniforms, ties, scarves, jumpers, and cardigans, authentic robes, and character uniforms, as well as other apparel and jewelry fashion items inspired by the four school houses of Gryffindor, Ravenclaw, Hufflepuff, and Slytherin. Don’t forget to top it all off with a new wizard hat from the finest and most fashionable assortment in Diagon Alley.</string>
    <string name="magicalMenagerie">This colourful shop is filled with displays of owls, toads, Hippogriffs, unicorns and other magical creatures depicted in the Harry Potter books and movies.Here a guest can purchase a variety of plush toys including Crookshanks, Fang, Buckbeak, Fluffy and Scabbers. Also available are Cornish pixies, ferrets, Pygmy Puffs, and an assortment of owls, including Pigwidgeon and Hedwig.</string>
    <string name="viewAll">View All</string>
</resources>