<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.cher.cherproject2.MainActivity">

    <ImageView
        android:id="@+id/welcome_imageView_id"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/hogwartssunset"/>

    <LinearLayout
        android:id="@+id/icons_row1_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/welcome_imageView_id"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <Button
            android:id="@+id/favorite_button_id"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:text="@string/favorites"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textColor="@color/gryffindorScarlet"
            android:drawableTop="@drawable/new_favorites_icon_"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/allResults_button_id"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:text="@string/viewAll"
            android:textSize="10sp"
            android:textColor="@color/gryffindorScarlet"
            android:drawableTop="@drawable/new_view_all__triple_icon"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/shows_button_id"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:text="@string/shows"
            android:textSize="10sp"
            android:textColor="@color/gryffindorScarlet"
            android:drawableTop="@drawable/new_shows_icon"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/icons_row2_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@+id/icons_row1_id">

        <Button
            android:id="@+id/rides_button_id"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:text="@string/rides"
            android:textSize="10sp"
            android:textColor="@color/gryffindorScarlet"
            android:drawableTop="@drawable/new_rides_icon"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/shopping_button_id"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:text="@string/shopping"
            android:textSize="10sp"
            android:textColor="@color/gryffindorScarlet"
            android:drawableTop="@drawable/new_shopping_icon"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/food_button_id"
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:text="@string/food"
            android:textSize="10sp"
            android:textColor="@color/gryffindorScarlet"
            android:drawableTop="@drawable/new_food_icon"
            android:layout_weight="1"
            />

    </LinearLayout>

</RelativeLayout>
